// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Session list items snapshots: badges 0 empty 1`] = `null`;

exports[`Session list items snapshots: badges 1 bluetooth 1`] = `
<div
  class="session_item_badges"
>
  <span
    class="session_item_badge"
    data-for="sessionTooltipId"
    data-tip="BLE"
  >
    <span
      class="icon ble"
    />
  </span>
</div>
`;

exports[`Session list items snapshots: badges 2 corp 1`] = `
<div
  class="session_item_badges"
>
  <span
    class="session_item_badge"
    data-for="sessionTooltipId"
    data-tip="Корпоративная поездка"
  >
    <span
      class="icon corp"
    />
  </span>
</div>
`;

exports[`Session list items snapshots: badges 2.1 yandex account 1`] = `
<div
  class="session_item_badges"
>
  <span
    class="session_item_badge"
    data-for="sessionTooltipId"
    data-tip="Яндекс.Плюс (кешбек)"
  >
    <span
      class="icon yac"
    />
  </span>
</div>
`;

exports[`Session list items snapshots: badges 3 delegation 1`] = `
<div
  class="session_item_badges"
>
  <span
    class="session_item_badge"
    data-for="sessionTooltipId"
    data-tip="передаёт руль с остатком пакета"
  >
    <span
      class="session_item_badges_label delegation"
    >
      ПЕР
    </span>
  </span>
</div>
`;

exports[`Session list items snapshots: badges 4 delegation from 1`] = `
<div
  class="session_item_badges"
>
  <span
    class="session_item_badge"
    data-for="sessionTooltipId"
    data-tip="принимает руль с остатком пакета"
  >
    <span
      class="session_item_badges_label delegation_from"
    >
      ПРИЁМ
    </span>
  </span>
</div>
`;

exports[`Session list items snapshots: badges 5 free 1`] = `
<div
  class="session_item_badges"
>
  <span
    class="session_item_badge"
    data-for="sessionTooltipId"
    data-tip="подвешенная аренда"
  >
    <span
      class="session_item_badges_label free"
    >
      ПОДВ
    </span>
  </span>
</div>
`;

exports[`Session list items snapshots: badges 6 fee 1`] = `
<div
  class="session_item_badges"
>
  <span
    class="session_item_badge"
    data-for="sessionTooltipId"
    data-tip="Зона с минимальной стоимостью завершения"
  >
    <span
      class="session_item_badges_label fee"
    >
      Min
    </span>
  </span>
</div>
`;

exports[`Session list items snapshots: badges 7 taxi 1`] = `
<div
  class="session_item_badges"
>
  <span
    class="session_item_badge"
    data-for="sessionTooltipId"
    data-tip="Яндекс.GO (такси)"
  >
    <span
      class="icon taxi"
    />
  </span>
</div>
`;

exports[`Session list items snapshots: badges 8 long term 1`] = `
<div
  class="session_item_badges"
>
  <span
    class="session_item_badge"
    data-for="sessionTooltipId"
    data-tip="Долгосрок"
  >
    <span
      class="icon long_term"
    />
  </span>
</div>
`;

exports[`Session list items snapshots: badges 9 double session 1`] = `
<div
  class="session_item_badges"
>
  <span
    class="session_item_badge"
    data-for="sessionTooltipId"
    data-tip="Возможно двойная аренда"
  >
    <span
      class="session_item_badges_label double"
    >
      2x
    </span>
  </span>
</div>
`;

exports[`Session list items snapshots: badges offer evolution 1`] = `
<div
  class="session_item_badges"
>
  <span
    class="session_item_badge"
    data-for="sessionTooltipId"
    data-tip="Эволюция тарифа"
  >
    <span
      class="session_item_badges_label evo"
    >
      эво
    </span>
  </span>
</div>
`;

exports[`Session list items snapshots: badges voyage 1`] = `
<div
  class="session_item_badges"
>
  <span
    class="session_item_badge"
    data-for="sessionTooltipId"
    data-tip="Вояж (подробная информация по клику)"
  >
    <a
      class="link   "
      href="#/support/voyage/bulls_manor_5"
      rel="noopener"
      target="_blank"
    >
      <span
        class="icon voyage"
      />
    </a>
  </span>
</div>
`;

exports[`Session list items snapshots: city 1 city 1`] = `
<div
  class="session_item_city"
>
  Москва
</div>
`;

exports[`Session list items snapshots: city 2 cities 1`] = `
<div
  class="session_item_city"
>
  Москва ⟶ Питер
</div>
`;

exports[`Session list items snapshots: city new city 1`] = `
<div
  class="session_item_city"
>
  —
</div>
`;

exports[`Session list items snapshots: duration less a day 1`] = `
<div
  class="session_item_duration"
>
  00:01:18
</div>
`;

exports[`Session list items snapshots: duration more then day 1`] = `
<div
  class="session_item_duration"
>
  1дн. 03:48:16
</div>
`;

exports[`Session list items snapshots: feedback with translation 1`] = `
<div
  class="session_item_badges"
>
  <span
    class="session_item_badge"
    data-for="sessionTooltipId"
    data-tip="<b>Фидбек</b>: <div data-reactroot=\\"\\">one</div><div data-reactroot=\\"\\">two</div><div data-reactroot=\\"\\">3</div>"
  >
    <span
      class="icon circle "
    >
      3
    </span>
  </span>
</div>
`;

exports[`Session list items snapshots: feedback without translation (still loading) 1`] = `
<div
  class="session_item_badges"
>
  <span
    class="session_item_badge"
    data-for="sessionTooltipId"
    data-tip="<b>Фидбек</b>: <div data-reactroot=\\"\\">1</div><div data-reactroot=\\"\\">2</div><div data-reactroot=\\"\\">3</div><pre>Загрузка переводов...</pre>"
  >
    <span
      class="icon circle "
    >
      3
    </span>
  </span>
</div>
`;

exports[`Session list items snapshots: finish has diff status  1`] = `
<div
  class="session_item_finish"
>
  <div
    class="session_item_event_status"
  >
    old_state_reservation
  </div>
</div>
`;

exports[`Session list items snapshots: finish is finished 1`] = `
<div
  class="session_item_finish"
>
  <span
    class="formatted-date "
  >
    06 ИЮЛ 2020, 13:49:23
  </span>
</div>
`;

exports[`Session list items snapshots: finish status: not finished session  1`] = `
<div
  class="session_item_main_status session_item_current"
/>
`;

exports[`Session list items snapshots: finish status: session finished 1`] = `
<div
  class="session_item_main_status "
/>
`;

exports[`Session list items snapshots: insurance with insurance 1`] = `
<div
  class="session_item_badges"
>
  <span
    class="session_item_badge"
    data-for="sessionTooltipId"
    data-tip="<b>Страховая</b>: <div data-reactroot=\\"\\"><span class=\\"formatted-date \\">02 ЯНВ 1986, 00:00:00</span> - <span class=\\"formatted-date \\">02 ЯНВ 1986, 00:00:00</span></div>"
  >
    <span
      class="icon circle insurance"
    >
      1
    </span>
  </span>
</div>
`;

exports[`Session list items snapshots: insurance without insurance 1`] = `null`;

exports[`Session list items snapshots: mileage empty 1`] = `
<div
  class="session_item_mileage "
>
  <a
    class="link   "
    href="#/tracks?session_id=73d18d24-c5bdbad8-75bd10a3-5fa74cd5&status="
    rel="noopener"
  >
    —
  </a>
</div>
`;

exports[`Session list items snapshots: mileage less 1km 1`] = `
<div
  class="session_item_mileage "
>
  <a
    class="link   "
    href="#/tracks?session_id=73d18d24-c5bdbad8-75bd10a3-5fa74cd5&status="
    rel="noopener"
  >
    &lt;1 км
  </a>
</div>
`;

exports[`Session list items snapshots: mileage usual 10 km 1`] = `
<div
  class="session_item_mileage session_item_mileage_hr"
>
  <a
    class="link   "
    href="#/tracks?session_id=37900b02-d5bfffb6-cc2aeea4-52af4f2&status="
    rel="noopener"
  >
    10.0 кm
  </a>
</div>
`;

exports[`Session list items snapshots: offer / bill some bill 1`] = `
<div
  class="session_item_total_price"
>
  1390.22 ₽
</div>
`;

exports[`Session list items snapshots: offer / bill some offer 1`] = `
<div
  class="session_item_offer_name"
  data-for="sessionTooltipId"
  data-place="left"
  data-tip="<table class=\\"offer_table custom_tooltip\\" data-reactroot=\\"\\"><tbody><tr><td>Оффер:</td><td><strong>Минуты</strong></td></tr><tr><td>Группа тарифов:</td><td><strong>Минуты</strong></td></tr><tr><td>Тариф:</td><td>поездка: <strong>10.98 ₽</strong><br/>ожидание: <strong>5.18 ₽</strong></td></tr><tr class=\\"ufo_field\\"><td colSpan=\\"2\\"><div>Ожидание — 5,18 ₽/мин</div><div>20 мин бесплатного ожидания</div></td></tr><tr><td>Кешбэк при соблюдении тарифа:</td><td>5%</td></tr><tr><td colSpan=\\"2\\" class=\\"block_title \\">Стоимость перерасхода без скидок</td></tr><tr><td>МИН:</td><td>поездка: <strong>10.98 ₽</strong><br/>ожидание: <strong>5.18 ₽</strong></td></tr><tr><td class=\\"block_last_el\\">КМ:</td><td class=\\"block_last_el\\"><strong>—</strong></td></tr><tr><td colSpan=\\"2\\" class=\\"block_title\\">Стоимость перерасхода со скидками</td></tr><tr><td>МИН:</td><td>поездка: <strong>10.98 ₽</strong><br/>ожидание: <strong>5.18 ₽</strong></td></tr><tr><td class=\\"block_last_el\\">КМ:</td><td class=\\"block_last_el\\"><strong>—</strong></td></tr><tr><td>Варианты оплаты:</td><td><span>card<!-- -->; </span><span>bonus_kazan_no-ride<!-- -->; </span><span>bonus<!-- -->; </span><strong>yandex_account<!-- -->; </strong></td></tr><tr><td>Первоначальная стоимость:</td><td><strong>—</strong></td></tr><tr><td>Радар:</td><td><strong>—</strong></td></tr><tr><td colSpan=\\"2\\"><strong>Итого: </strong>1390.22 ₽</td></tr></tbody></table>"
>
  Минуты
</div>
`;

exports[`Session list items snapshots: scoring trace scoring trace 1`] = `
<div
  class="session_item_badges"
>
  <span
    class="session_item_badge"
    data-for="sessionTooltipId"
    data-tip="Неаккуратная поездка"
  >
    <span
      class="session_item_badges_label scoring_trace"
    >
       ⚡ 
    </span>
  </span>
  <span
    class="session_item_badge"
    data-for="sessionTooltipId"
    data-tip="<b>Фидбек</b>: <div data-reactroot=\\"\\">1</div><div data-reactroot=\\"\\">scoring_trace_tag</div><div data-reactroot=\\"\\">3</div><pre>Загрузка переводов...</pre>"
  >
    <span
      class="icon circle "
    >
      3
    </span>
  </span>
</div>
`;

exports[`Session list items snapshots: scoring trace with translation 1`] = `
<div
  class="session_item_badges"
>
  <span
    class="session_item_badge"
    data-for="sessionTooltipId"
    data-tip="Неаккуратная поездка"
  >
    <span
      class="session_item_badges_label scoring_trace"
    >
       ⚡ 
    </span>
  </span>
  <span
    class="session_item_badge"
    data-for="sessionTooltipId"
    data-tip="<b>Фидбек</b>: <div data-reactroot=\\"\\">one</div><div data-reactroot=\\"\\">scoring_trace_tag</div><div data-reactroot=\\"\\">3</div>"
  >
    <span
      class="icon circle "
    >
      3
    </span>
  </span>
</div>
`;

exports[`Session list items snapshots: speeding trace tag speeding trace tag 1`] = `
<div
  class="session_item_badges"
>
  <span
    class="session_item_badge"
    data-for="sessionTooltipId"
    data-tip="Превышение скорости"
  >
    <span
      class="session_item_badges_label speeding_trace_tag"
    >
      🚨
    </span>
  </span>
  <span
    class="session_item_badge"
    data-for="sessionTooltipId"
    data-tip="<b>Фидбек</b>: <div data-reactroot=\\"\\">1</div><div data-reactroot=\\"\\">speeding_trace_tag</div><div data-reactroot=\\"\\">3</div><pre>Загрузка переводов...</pre>"
  >
    <span
      class="icon circle "
    >
      3
    </span>
  </span>
</div>
`;

exports[`Session list items snapshots: speeding trace tag with translation 1`] = `
<div
  class="session_item_badges"
>
  <span
    class="session_item_badge"
    data-for="sessionTooltipId"
    data-tip="Превышение скорости"
  >
    <span
      class="session_item_badges_label speeding_trace_tag"
    >
      🚨
    </span>
  </span>
  <span
    class="session_item_badge"
    data-for="sessionTooltipId"
    data-tip="<b>Фидбек</b>: <div data-reactroot=\\"\\">one</div><div data-reactroot=\\"\\">speeding_trace_tag</div><div data-reactroot=\\"\\">3</div>"
  >
    <span
      class="icon circle "
    >
      3
    </span>
  </span>
</div>
`;
